--- a/cadastro1.html
+++ b/cadastro1.html
@@ -29,8 +29,8 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         input, button {
-            width: 100%;
-            margin: 10px 0;
+            width: 50%;
+            margin: 10px;
             padding: 10px;
             border-radius: 4px;
             border: 1px solid #ccc;
