--- a/cadastro1.html
+++ b/cadastro1.html
@@ -21,7 +21,7 @@
             text-decoration: none;
         }
         .container {
-            max-width: 50%;
+            max-width: 50px;
             margin: auto;
             background: white;
             padding: 35px;
