--- a/cadastro1.html
+++ b/cadastro1.html
@@ -21,7 +21,7 @@
             text-decoration: none;
         }
         .container {
-            max-width: 50px;
+            max-width: auto;
             margin: auto;
             background: white;
             padding: 35px;
@@ -29,7 +29,7 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         input, button {
-            width: 50%;
+            width: 100%;
             margin: 10px;
             padding: 10px;
             border-radius: 4px;
