Atualizar o perfil1.html

--- a/perfil1.html
+++ b/perfil1.html
@@ -314,12 +314,13 @@
             <a href="perfil1.html">
                 <i class="fas fa-home"></i>
             </a>
-            <button onclick="abrirPainel('painelpesquisar')" title="pesquisar">
+           <a href="pesquisar.html">
                 <i class="fab fa-searchengin"></i>
-            </button>
-            <button onclick="abrirPainel('painelchat')" title="chat">
-                <i class="fas fa-comments"></i>
-            </button>
+           </a>
+            <a href="chat.html">
+<i class="fas fa-comments"></i></a>
+
+           
             <a href="grupo.html"> <i class="fas fa-users"></i></a>
             <a href="menu.html">
                 <i class="fas fa-cogs"></i>
