Atualizar o perfil1.html

--- a/perfil1.html
+++ b/perfil1.html
@@ -301,7 +301,7 @@
 
 
     <div class="perfil">
-        <img id="fotoPerfil" class="perfil-foto" src="2.webp" alt="Foto de Perfil">
+        <a href="<img id="fotoPerfil"></a> class="perfil-foto" src="2.webp" alt="Foto de Perfil">
 
     </div>
 
