Atualizar o perfil1.html

--- a/perfil1.html
+++ b/perfil1.html
@@ -301,8 +301,8 @@
 
 
     <div class="perfil">
-        <a href="perfil3.html"><img id="fotoPerfil"</a> class="perfil-foto" src="2.webp" alt="Foto de Perfil">
-
+        <a href="perfil3.html"><img id="fotoPerfil" class="perfil-foto" src="2.webp" alt="Foto de Perfil">
+</a>
     </div>
 
 
