Atualizar o perfil1.html

--- a/perfil1.html
+++ b/perfil1.html
@@ -299,12 +299,12 @@
 </head>
 <body>
 
-
+ <a href="perfil3.html">
     <div class="perfil">
-        <a href="perfil3.html"><img id="fotoPerfil" class="perfil-foto" src="2.webp" alt="Foto de Perfil">
-</a>
-    </div>
+       <img id="fotoPerfil" class="perfil-foto" src="2.webp" alt="Foto de Perfil">
 
+    </div>
+</a>
 
 
     <div class="topo">
